--- a/OW.Operation/Web.config
+++ b/OW.Operation/Web.config
@@ -8,6 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+  <connectionStrings>
+    <add name="SqlString" connectionString="Data Source=119.23.13.159;PORT=3306;Database=OW_Car;User ID=root;Pwd=123456;Charset=utf8" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
