--- a/OW.Operation/OW.Operation.csproj
+++ b/OW.Operation/OW.Operation.csproj
@@ -151,6 +151,13 @@
     <Compile Include="OW.BLL\DataManager.cs" />
     <Compile Include="OW.DAL\DataServer.cs" />
     <Compile Include="OW.DAL\DBHelper.cs" />
+    <Compile Include="OW.Model\CarSettledInfo.cs" />
+    <Compile Include="OW.Model\CarsInfo.cs" />
+    <Compile Include="OW.Model\CarTypeInfo.cs" />
+    <Compile Include="OW.Model\Msg.cs" />
+    <Compile Include="OW.Model\ParkingInfo.cs" />
+    <Compile Include="OW.Model\UserInfo.cs" />
+    <Compile Include="OW.Model\UserTypeInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -500,6 +507,8 @@
     <Content Include="wwwroot\lib\js\bootstrap.bundle.min.js" />
     <Content Include="wwwroot\lib\js\bootstrap.js" />
     <Content Include="wwwroot\lib\js\bootstrap.min.js" />
+    <Content Include="wwwroot\msg\message.css" />
+    <Content Include="wwwroot\msg\message.js" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -529,9 +538,7 @@
     <Content Include="wwwroot\data\countries.json" />
     <Content Include="Views\Home\Statistics.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="OW.Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
