--- a/OW.Operation/Web.config
+++ b/OW.Operation/Web.config
@@ -10,7 +10,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="SqlString" connectionString="Data Source=119.23.13.159;PORT=3306;Database=OW_Car;User ID=root;Pwd=123456;Charset=utf8" providerName="MySql.Data.MySqlClient" />
+    <add name="SqlString" connectionString="Data Source=114.115.159.97;PORT=3306;Database=OW_Car;User ID=root;Pwd=NET1706yhf...;Charset=utf8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   
   <appSettings>
